kubernetes/apps/filebot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebot
  labels:
    app: filebot
spec:
  selector:
    matchLabels:
      app: filebot
  template:
    metadata:
      labels:
        app: filebot
    spec:
      containers:
        - name: filebot
          image: rednoah/filebot:node@sha256:505872599555762d49feb9bf1c0b65022de9dc5806b6be028129d9040aeba042
          # "node" tag, latest as of last checking
          ports:
            - containerPort: 5452
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /video
              name: video
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: filebot-pvc
        - name: video
          persistentVolumeClaim:
            claimName: video-pvc
