kubernetes/apps/filebot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebot
spec:
  selector:
    app: filebot
  ports:
    - protocol: TCP
      port: 5452
