kubernetes/apps/filebot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: ingress-nginx-internal
  tls:
    - hosts:
        - filebot.immortalkeep.com
      secretName: filebot-ingress-tls
  rules:
    - host: filebot.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: filebot
                port:
                  number: 5452
